# aws-reports

./: .gitignore  Dockerfile  README.md  pyproject.toml
aws_reports/: app.py  asin_meta.py  config.py  db.py  ingest.py  reports.py  user_db.py  userdirs.py
aws_reports/templates/: index.html  layout.html
aws_reports/templates/asin_meta/: edit.html  index.html
aws_reports/templates/auth/: login.html
aws_reports/templates/brands/: edit.html  index.html  manage.html  reports.html  weekly_reports.html
aws_reports/templates/brands/partials/: monthly_report.html  weekly_report.html
